[metadata]
name = sanic_blog_api
# Version needs regex in setup.py.
url = https://github.com/aram2726/sanic_blog
;project_urls =
;    Documentation = https://...
;    Code = https://...
;    Issue tracker = https://...
license = BSD-3-Clause
author = Aram Haroyan
author_email = aramharoyan@gmail.com
description = Blog api built using sanic framework 
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    tech_blog=bin.tech_blog:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = src/tests

filterwarnings =
    error
